--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <div class="projects">
       <!-- Project 1 -->
       <article class="project reveal">
-        <div class="thumb"><img alt="Eicher dashboard" src="https://images.unsplash.com/photo-1551288049-bebda4e38f71?q=80&w=1200&auto=format&fit=crop"/></div>
+        <div class="thumb"><img alt="Eicher dashboard" src="https://github.com/Pritam9952/Data-Analysis-Project-Excel/raw/main/Eicher_Tmtl_Traniee/images/thumbanil_eicher.png"/></div>
         <div class="project-body">
           <h3>Defect Analysis Dashboard — Eicher TMTL</h3>
           <p>Excel + Power Query dashboard for real-time scratch/defect tracking in tractor lines.</p>
@@ -247,7 +247,7 @@
 
       <!-- Project 2 -->
       <article class="project reveal">
-        <div class="thumb"><img alt="Hospital system" src="https://images.unsplash.com/photo-1587351021744-4531d5d9c6f7?q=80&w=1200&auto=format&fit=crop"/></div>
+        <div class="thumb"><img alt="Hospital system" src="https://i.pinimg.com/736x/3e/66/6e/3e666e50854f4069c37150d7e8c9bdc2.jpg"/></div>
         <div class="project-body">
           <h3>Hospital Management System</h3>
           <p>Python + SQL application for patient, staff, billing & appointment workflows.</p>
@@ -318,6 +318,63 @@
           </div>
         </div>
       </article>
+
+       <!-- Project 5 -->
+      <article class="project reveal">
+        <div class="thumb"><img alt="BlinkIT Grocery Sales Dashboard" src="https://github.com/Pritam9952/Major_data_analysis_projects/raw/main/Blinkit/PowerBi_dashboard/dashboard.png"/></div>
+        <div class="project-body">
+          <h3>BlinkIT Grocery Sales Analysis</h3>
+          <p>SQL, Power BI, and Python to extract insights, visualize trends, and enhance decision-making for business growth.</p>
+          <div class="stack">
+            <span class="badge">Python</span>
+            <span class="badge">SQL</span>
+            <span class="badge">Power BI</span>
+          </div>
+          <details>
+            <summary>More details</summary>
+            <ul>
+              <li>Built an interactive Power BI dashboard.</li>
+              <li>Performed data cleaning & transformation using Python and SQL.</li>
+              <li>Visualization of drivers impacting priceAnalyzed sales patterns, customer preferences, ratings, and outlet performance..</li>
+            </ul>
+          </details>
+          <div class="actions" style="margin-top:12px">
+            <a class="btn" href="https://github.com/Pritam9952/Major_data_analysis_projects/tree/main/Blinkit" target="_blank" rel="noopener">Source</a>
+          </div>
+        </div>
+      </article>
+
+      <!-- Project 6 -->
+
+      <article class="project reveal">
+  <div class="thumb">
+    <img alt="Uber Cab Data Analysis Dashboard" src="https://github.com/Pritam9952/Major_data_analysis_projects/raw/main/Uber%20Rides%20Analysis%20Project/dashboard.png"/>
+  </div>
+  <div class="project-body">
+    <h3>🚖 Uber Cab Data Analysis & Dashboard</h3>
+    <p>
+      Analyzed Uber ride data using Python, SQL, and Power BI to uncover patterns in rides, revenue, cancellations, and payment methods. Built an interactive dashboard for business insights.
+    </p>
+    <div class="stack">
+      <span class="badge">Python</span>
+      <span class="badge">Power BI</span>
+      <span class="badge">SQL</span>
+    </div>
+    <details>
+      <summary>More details</summary>
+      <ul>
+        <li>Performed data cleaning, transformation, and exploratory data analysis using Python.</li>
+        <li>Built an interactive dashboard in Power BI/Tableau for visualization and KPIs tracking.</li>
+        <li>Analyzed ride patterns, monthly revenue trends, payment method performance, and cancellations.</li>
+        <li>Identified top drop locations, peak booking hours, and key business insights.</li>
+      </ul>
+    </details>
+    <div class="actions" style="margin-top:12px">
+      <a class="btn" href="https://github.com/Pritam9952/Major_data_analysis_projects/blob/main/Uber%20Rides%20Analysis%20Project/README.md" target="_blank" rel="noopener">Source</a>
+    </div>
+  </div>
+</article>
+
     </div>
   </section>
 
@@ -454,4 +511,3 @@
   </script>
 </body>
 </html>
-
